# Recopy

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/commands/: release.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: easycv-dev-plan.md
scripts/: bump-version.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_link_type.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: clipboard.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/platform/: fallback.rs  macos.rs  mod.rs  windows.rs
src/components/: BrandLogo.tsx  ClipboardCard.tsx  ClipboardList.tsx  CopyHud.tsx  FavoriteStar.tsx  FileCard.tsx  ImageCard.tsx  ItemContextMenu.tsx  LinkCard.tsx  PreviewPage.tsx  RichTextCard.tsx  SearchBar.tsx  SettingsPage.tsx  TextCard.tsx  TypeFilter.tsx  UpdateBanner.tsx  ViewTabs.tsx
src/components/__tests__/: ClipboardList.test.tsx  FavoriteStar.test.tsx  FileCard.test.tsx  ImageCard.test.tsx  SearchBar.test.tsx  TextCard.test.tsx
src/hooks/: useKeyboardNav.ts  useThumbnail.ts
src/hooks/__tests__/: useKeyboardNav.test.ts  useThumbnail.test.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/lib/: paste.ts  press-action.ts  time.ts  types.ts
src/lib/__tests__/: press-action.test.ts
src/stores/: clipboard-store.ts  settings-store.ts  toast-store.ts  update-store.ts
src/stores/__tests__/: clipboard-store.test.ts
src/test/: setup.ts
todos/: tests.md
website/: index.html  privacy.html  script.js  style.css  wrangler.jsonc
website/functions/download/: [platform].js
