[package]
name = "easycv"
version = "0.1.0"
description = "A free open-source cross-platform clipboard history manager"
authors = ["EasyCV Contributors"]
license = "MIT"
repository = "https://github.com/nicezzz/EasyCV"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "easycv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
image = "0.25"
tokio = { version = "1", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
