[package]
name = "recopy"
version = "0.1.0"
description = "A free open-source cross-platform clipboard history manager"
authors = ["Recopy Contributors"]
license = "MIT"
repository = "https://github.com/nicezzz/Recopy"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "recopy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
image = "0.25"
tokio = { version = "1", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-clipboard-x = "2.0.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.0"
sys-locale = "0.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
